--- a/index.html
+++ b/index.html
@@ -95,8 +95,18 @@
           (HTML y CSS) hemos cubierto con mucho más detalle en otras partes del Área de aprendizaje.
 
     </P>
-    <p>se puede considerar un lenjuague de programacion y</p>
+    <p>se puede considerar un lenjuague de programacion ya que le proporciona a una persona la capacidad de escribir una serie de intrucciones o secuencias de ordenes 
+        en forma de algoritmos con el fin de controlar el comportamiento fisico o logico de un sistema informatico, 
+        lo cual es exactamente lo que hace javascript al permitirle crear a una persona ,por ejemplo una pagina wed</p>
 
+
+        <h2>10.¿A qué se llama DOM y cual es su función?</h2>
+        <p>Document Object Model o DOM ('Modelo de Objetos del Documento' o 'Modelo en Objetos para la Representación de Documentos') 
+            es esencialmente una interfaz de plataforma que proporciona un conjunto estándar de objetos para representar documentos HTML, XHTML y XML, 
+            un modelo estándar sobre cómo pueden combinarse dichos</p>
+            <h2>11.¿En qué puede ayudarnos javascript en una página web?</h2>
+            <p>JavaScript es el lenguaje de programación que debes usar para añadir características interactivas a tu sitio web, (por ejemplo, juegos,
+                 eventos que ocurren cuando los botones son presionados o los datos son introducidos en los formularios, efectos de estilo dinámicos, animación, y mucho más</p>
 
 </body>     
-</html>
+</html> 
